--- a/src/components/SliderItem/SliderItem.scss
+++ b/src/components/SliderItem/SliderItem.scss
@@ -1,6 +1,6 @@
 .slider-item {
-    width: 289px;
-    height: 162px;
+    min-width: 289px;
+    min-height: 162px;
     background-color: white;
     color: black;
     margin-right: 5px;
