--- a/src/components/Billboard/Billboard.scss
+++ b/src/components/Billboard/Billboard.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     .banner {
-        height: 100%;
+        height: 90%;
         width: 100%;
         object-fit: cover;
     }
@@ -17,13 +17,16 @@
         left: 4%;
         width: 36%;
 
-        .title-logo {
-            width: clamp(15rem, 30vw, 40rem);
+        .movie-title {
+            color: goldenrod;
+            font-size: 3vw;
+            margin: .6rem 0;
         }
 
         .description {
             font-size: 1.2vw;
-            margin: 1rem 0;
+            font-weight: 400;
+            text-align: justify;
         }
 
         .button-box {
@@ -80,6 +83,7 @@
             @media screen and (max-width: 800px) {
                 button {
                     padding: 0.3rem 1rem;
+                    border-radius: 3px;
                 }
 
                 .icon {
@@ -91,6 +95,7 @@
             @media screen and (max-width: 500px) {
                 button {
                     padding: 0.2rem .7rem;
+                    border-radius: 3px;
                 }
 
                 .icon {
