--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,6 +1,7 @@
 .carousel {
     cursor: pointer;
     padding: 0 clamp(2rem , 3vw, 3.75rem);
+    color: white;
 
     .arrow {
         position: absolute;
