--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -23,7 +23,7 @@
 
     .title {
         margin-top: 1rem;
-        margin-bottom: 0;
+        margin-bottom: 1rem;
     }
 
     .slider-container {
