--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -44,7 +44,7 @@
                 width: 40%;
 
                 .title {
-                    color: goldenrod;
+                    color: red;
                     font-size: 2.5rem;
                     margin: 1rem 0;
                 }
