--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -44,7 +44,8 @@
                 width: 40%;
 
                 .title {
-                    color: red;
+                    color: white;
+                    text-shadow: #000 0 0 10px;
                     font-size: 2.5rem;
                     margin: 1rem 0;
                 }
