--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -201,6 +201,7 @@
                         width: 17rem;
                         text-align: left;
                         padding: .4rem;
+                        border-radius: 5px;
                                         
                         div {
                             font-size: 1.2rem;
