--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -42,6 +42,7 @@
                     li {
                         display: inline-block;
                         margin-right: clamp(.8rem , 2vw, 3rem);
+                        text-shadow: #000 0 0 10px;
                     }
             
                     a {
@@ -212,7 +213,7 @@
                             margin-top: 8px;
 
                             &:hover {
-                                opacity: .5;
+                                text-decoration: underline;
                             }
                         }
                     }
