added multiple movie rows

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -86,8 +86,8 @@
                             }
                                 
                             &:hover {
-                                .add {
-                                    opacity: .6;
+                                svg {
+                                    opacity: .7;
                                 }
 
                                 .add-hover {
