--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ html {
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background-color: black;
+    background-color: #141414;
 }
 
 a {
