--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -2,6 +2,7 @@
     cursor: pointer;
     padding: 0 clamp(2rem , 3vw, 3.75rem);
     color: white;
+    margin-bottom: 5rem;
 
     .arrow {
         position: absolute;
@@ -22,8 +23,9 @@
     }
 
     .title {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        margin: 1rem .5rem;
+        font-size: 2rem;
+        text-shadow: #000 0 0 10px;
     }
 
     .slider-container {
