--- a/src/components/Billboard/Billboard.scss
+++ b/src/components/Billboard/Billboard.scss
@@ -4,7 +4,41 @@
 
     .banner {
         width: 100%;
+        height: 90vh;
         object-fit: cover;
+    }
+
+    .banner-shadow {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 7.5rem;
+        background: linear-gradient(180deg, transparent, rgba(14,14,14,.6), #141414);
+    }
+
+    @media screen and (max-width: 1200px) {
+        .banner {
+            height: 70vh;
+        }
+    }
+
+    @media screen and (max-width: 100px) {
+        .banner {
+            height: 60vh;
+        }
+    }
+
+    @media screen and (max-width: 800px) {
+        .banner {
+            height: 50vh;
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        .banner {
+            height: 40vh;
+        }
     }
 
     .info-wrapper {
@@ -12,7 +46,7 @@
         display: flex;
         align-items: flex-end;
         top: 0;
-        bottom: 35%;
+        bottom: 25%;
         left: 4%;
         width: 36%;
 
