--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -18,6 +18,7 @@
         align-items: center;
 
         .nav-left {
+            font-size: 1.2rem;
             display: flex;
             justify-content: flex-start;
             align-items: center;
@@ -91,7 +92,7 @@
                                 position: absolute;
                                 flex-direction: column;
                                 top: 1.3rem;
-                                left: -3.3rem;
+                                left: -2.6rem;
                                 align-items: center;
                             }
 
