--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,44 +1,46 @@
 .footer {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 4rem;
     font-size: 1.5rem;
-    flex-direction: column;
-    height: 5.6rem;
 
     .footer-wrapper {
-        margin-right: 10px;
-
-        .span-1 {
-            margin-right: 5px;
-            color: #969696;
-        }
-
-        .span-2 {
-            font-weight: 550;
-            color: white;
-            text-shadow: #000 0 0 10px;
-        }
-    }
-
-    .icon-box {
         display: flex;
-        color: white;
-        cursor: pointer;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
 
-        .icon {
-            margin-right: 1.7rem;
-            transform: scale(1.5);
-            transition: .5s;
+        .text-box {
+            display: flex;
+            gap: 5px;
 
-            &:first-child {
-                transform: scale(1.8);
+            .span-1 {
+                color: #969696;
             }
+    
+            .span-2 {
+                font-weight: 550;
+                color: white;
+                text-shadow: #000 0 0 10px;
+            }
+        }
 
-            &:hover {
-                opacity: .5;
+        .icon-box {
+            display: flex;
+            color: white;
+            cursor: pointer;
+            gap: 1.7rem;
+    
+            .icon {
+                transform: scale(1.5);
+                transition: .5s;
+    
+                &:first-child {
+                    transform: scale(1.8);
+                }
+    
+                &:hover {
+                    opacity: .5;
+                }
             }
         }
     }
